# TLDR_bot

./: .gitignore  LICENSE  RAG.ipynb  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/agent/: executor.py  prompts.py
backend/core/: config.py
backend/data_pipeline/: ingest.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20251024082144_make_otp_nullable_and_add_defaults/: migration.sql
backend/prisma/migrations/20251024122916_add_files/: migration.sql
backend/prisma/migrations/20251024123428_fix_files/: migration.sql
backend/prisma/migrations/20251028062058_minor_fix_1/: migration.sql
backend/prisma/migrations/20251028071942_minor_change_2/: migration.sql
backend/prisma/migrations/20251124201625_minor_change_5/: migration.sql
backend/prisma/migrations/20251201083024_add_citations/: migration.sql
backend/prisma/migrations/20251201103148_add_cascade_delete_to_files/: migration.sql
backend/routes/: file_routes.py  folder_routes.py  models.py  thread_routes.py  user_routes.py
backend/services/: vector_db.py
backend/tools/: auth.py  email_service.py  otp_gen.py
core/: RAG.ipynb
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/components/: new-chat-dialog.tsx  search-command.tsx
frontend/components/auth/: auth-branding.tsx  index.ts  (+3 more)
frontend/hooks/: use-auth.ts  use-chat-messaging.ts  use-chat.ts  use-file-selection.ts  use-files.ts  use-folder-sharing.ts  use-folders.ts  use-mutation-factory.ts  use-sidebar-state.ts  use-threads.ts  use-user.ts
frontend/lib/: animation-variants.ts  api.ts  chat-utils.ts  utils.ts
frontend/types/: auth.types.ts  chat.types.ts  index.ts
(+85 files in other folders)
