[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cors>=1.0.1",
    "fastapi[standard]>=0.119.0",
    "logging>=0.4.9.6",
    "passlib[bcrypt]>=1.7.4",
    "prisma>=0.15.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "slowapi>=0.1.9",
]

